<resources>
    <string name="app_name">RealTimeTraffic</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="search">Search</string>
    <string name="Refresh">Refresh</string>

    <string-array name="regions">
        <item>Choose District</item>
        <item>Hong Kong Island</item>
        <item>Kowloon</item>
        <item>Tsuen Wan</item>
        <item>Tuen Mun &amp; Tin Shui Wai</item>
        <item>Tai Po  North &amp; Yuen Long</item>
        <item>Shatin &amp; Ma On Shan</item>
        <item>Lantau</item>
    </string-array>

    <string-array name="region_LatLng">
        <item>0 0</item>
        <item>22.2588624 114.1900789</item>
        <item>22.3294286 114.1921509</item>
        <item>22.3699569 114.1095949</item>
        <item>22.3922313 113.9770816</item>
        <item>22.4687434 114.1132054</item>
        <item>22.3871376 114.1865953</item>
        <item>22.279703 113.939074</item>
    </string-array>

    <string name="rss_Weather">Weather</string>
    <string name="rss_Location">Location：</string>
    <string name="rss_Temperature">Temperature</string>
    <string name="rss_CurrTime">Current Time:</string>

    <string name="tab_Home">Home</string>
    <string name="tab_BookMarks">BookMarks</string>
    <string name="tab_History">History</string>

    <!--TODO: Setting Start !-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_preference">Setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="alert_box_title_language_choice">Language</string>
    <string name="language_alert">You have already chosen %s. Please choose again.</string>
    <string name="language_alert_zh">你已經選擇 繁體中文 了. 請重新選擇。</string>
    <string name="language_choice">language</string>
    <string-array name="language_options">
        <item>English</item>
        <item>繁體中文</item>
    </string-array>

    <string-array name="language_value_options">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="TrandionalChinese" translatable="false">繁體中文</string>
    <string name="English" translatable="false">English</string>
    <string name="pref_title_Language">Language</string>

    <!-- TODO:  Setting End-->

    <!-- TODO: RSS Reader TAG -->
    <string name="date">Date : </string>
    <string name="HUMIDITY_TAG" translatable="false">Relative Humidity :</string>
    <string name="WEATHER_TAG" translatable="false">Air temperature : </string>
    <string name="Degree"> degrees Celsius</string>
    <string name="DegreeSign" translatable="false">\u2103</string>
    <string name="WEATHER_TAG_ZH" translatable="false">氣 溫 ：</string>
    <string name="HUMIDITY_TAG_ZH" translatable="false">相 對 濕 度 ：</string>
    <string name="Degree_ZH" translatable="false"> 度</string>
    <!-- TODO: RSS READER END-->

    <string name="OK_BUTTON">OK</string>

    <!--TODO NavigationDrawer Header -->
    <string name="nav_feedback">FeedBack</string>
    <string name="nav_header_Miscellaneous">Miscellaneous</string>
    <string name="nav_about_us">About Real-Traffic App</string>
    <string name="nav_real_traffic">Traffic Monitoring</string>
    <string name="nav_suggestion">Route Suggestion</string>
    <string name="nav_home">Home</string>
    <!--TODO NavigationDrawer Header End -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="terrain">Terrain</string>
    <string name="nav_traffic_satelite">Satelite</string>
    <string name="map_mode">Map Mode</string>
    <string name="nav_traffic_traffic">Traffic</string>
    <string name="nav_map_default">Normal</string>

    <!-- TODO: Route Detail Text -->
    <string name="popup_add_bookMark">BookMark</string>
    <string name="popup_near">Near</string>
    <string name="popup_share">Share</string>
    <string name="route_detail_RouteName">Route Name</string>
    <string name="route_detail_Region">Region</string>
    <string name="route_detail_StartTime">Start Time</string>
    <string name="route_detail_TargetTime">Target Time</string>
    <string name="route_detail_btnSave">Save To Bookmark</string>
    <string name="route_detail_btnReset">Reset (Start Time and Target Time) </string>

    <string name="Minute">Minutes</string>

    <string name="title_activity_traffic_info_detail_scrolling">TrafficInfoDetailScrollingActivity</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Language">Language</string>
    <string name="edit_bookmark">Edit Bookmark</string>
    <string name="bookmark_delete">delete</string>

</resources>
