<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.NavTrafficMonitorFragment">

                <item android:id="@+id/nav_traffic_terrain"
                    android:icon="@drawable/ic_terrain_white_48dp"
                    android:orderInCategory="200"
                    android:title="@string/terrain"
                    app:showAsAction="ifRoom"
                    />
                <item android:id="@+id/nav_traffic_satelite"
                    android:icon="@drawable/ic_satellite_white_48dp"
                    android:orderInCategory="300"
                    android:title="@string/nav_traffic_satelite"
                    app:showAsAction="ifRoom"
                    />
                <item android:id="@+id/nav_traffic_traffic"
                    android:icon="@drawable/ic_traffic_white_48dp"
                    android:orderInCategory="100"
                    android:title="@string/nav_traffic_traffic"
                    app:showAsAction="ifRoom"
                    />
                <item android:id="@+id/nav_traffic_default"
                    android:icon="@drawable/ic_map_white_24dp"
                    android:orderInCategory="100"
                    android:title="@string/nav_map_default"
                    app:showAsAction="ifRoom"
                />

</menu>