<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/routeWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
            android:id="@+id/txtRoute"
            android:hint="@string/route_detail_RouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regionWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
            android:id="@+id/txtRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/route_detail_Region"

            android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/startTimeWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
            android:id="@+id/txtStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/route_detail_StartTime"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/targetTimeWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
            android:id="@+id/txtTargetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/route_detail_TargetTime"
            />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_detail_btnSave"
                android:drawableLeft="@drawable/ic_bookmark_black_24dp"
                android:id="@+id/btnAdd"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_detail_btnReset"
                android:id="@+id/btnReset"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
