<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@android:drawable/sym_def_app_icon" android:id="@+id/bgHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/lblTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rss_Weather"
            android:layout_above="@+id/lblDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/lblCurrLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rss_Location"
            android:layout_above="@+id/lblTemp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_alignTop="@+id/lblCurrLocation"
            android:layout_alignRight="@+id/txtTemperature"
            android:layout_alignEnd="@+id/txtTemperature" />

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temperature"
            android:layout_below="@+id/txtLocation"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_above="@+id/lblCurrTime"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:id="@+id/txtDate"
            android:layout_alignTop="@+id/lblDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:id="@+id/lblCurrTime"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:id="@+id/txtCurrTime"
            android:layout_alignTop="@+id/lblCurrTime"
            android:layout_alignRight="@+id/txtLocation"
            android:layout_alignEnd="@+id/txtLocation" />


    </RelativeLayout>
